--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "scripts": {
-    "dev": "next",
-    "build": "next build && next export -o www",
-    "start": "next start",
-    "check": "tsc"
-  },
-  "dependencies": {
-    "next": "^10.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
-  },
-  "devDependencies": {
-    "@types/node": "^14.14.6",
-    "@types/react": "^16.9.55",
-    "@types/react-dom": "^16.9.9",
-    "typescript": "^4.0.5"
-  }
+    "scripts": {
+        "dev": "next",
+        "build": "next build && next export -o www",
+        "buildpages": "next build && next export -o docs",
+        "start": "next start",
+        "check": "tsc"
+    },
+    "dependencies": {
+        "next": "^10.0.1",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1"
+    },
+    "devDependencies": {
+        "@types/node": "^14.14.6",
+        "@types/react": "^16.9.55",
+        "@types/react-dom": "^16.9.9",
+        "typescript": "^4.0.5"
+    }
 }
