--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dependencies": {
         "next": "^10.0.1",
         "react": "^17.0.1",
-        "react-dom": "^17.0.1"
+        "react-dom": "^17.0.1",
+        "showdown": "^1.9.1"
     },
     "devDependencies": {
         "@types/node": "^14.14.6",
