--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
     "scripts": {
         "dev": "next",
-        "build": "next build && next export -o www",
-        "buildpages": "next build && next export -o docs",
+        "build": "next build && next export -o docs",
         "start": "next start",
         "check": "tsc"
     },
