--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "check": "tsc"
     },
     "dependencies": {
+        "highlight.js": "^10.4.1",
         "next": "^10.0.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
