--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "scripts": {
-        "dev": "next",
-        "build": "next build && next export -o docs",
+        "dev": "set NODE_ENV=development & next",
+        "build": "next build && next start",
         "start": "next start",
         "check": "tsc"
     },
