--- a/package.json
+++ b/package.json
@@ -9,23 +9,26 @@
         "check": "tsc"
     },
     "dependencies": {
-        "@contentful/rich-text-react-renderer": "14.1.1",
+        "@contentful/rich-text-react-renderer": "^14.1.2",
+        "@contentful/rich-text-types": "^14.1.2",
         "classnames": "2.2.6",
         "date-fns": "2.14.0",
+        "highlight.js": "^10.4.1",
         "next": "latest",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "showdown": "^1.9.1",
-        "highlight.js": "^10.4.1"
+        "showdown": "^1.9.1"
     },
     "devDependencies": {
         "@fullhuman/postcss-purgecss": "^2.3.0",
-        "contentful-import": "^7.8.7",
-        "postcss-preset-env": "^6.7.0",
-        "tailwindcss": "^1.5.1",
         "@types/node": "^14.14.6",
         "@types/react": "^16.9.55",
         "@types/react-dom": "^16.9.9",
+        "contentful-import": "^7.8.7",
+        "css-loader": "^3.0.0",
+        "sass": "^1.32.0",
+        "postcss-preset-env": "^6.7.0",
+        "tailwindcss": "^1.5.1",
         "typescript": "^4.0.5"
     },
     "license": "MIT"
