--- a/package.json
+++ b/package.json
@@ -16,20 +16,19 @@
         "highlight.js": "^10.4.1",
         "next": "latest",
         "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "showdown": "^1.9.1"
+        "react-dom": "^16.13.1"
     },
     "devDependencies": {
-        "@fullhuman/postcss-purgecss": "^2.3.0",
         "@types/node": "^14.14.6",
         "@types/react": "^16.9.55",
         "@types/react-dom": "^16.9.9",
         "contentful-import": "^7.8.7",
-        "css-loader": "^3.0.0",
+        "css-loader": "^5.0.1",
         "sass": "^1.32.0",
-        "postcss-preset-env": "^6.7.0",
-        "tailwindcss": "^1.5.1",
-        "typescript": "^4.0.5"
+        "typescript": "^4.0.5",
+        "sass-loader": "^10.1.0",
+        "showdown": "^1.9.1",
+        "style-loader": "^2.0.0"
     },
     "license": "MIT"
 }
