--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
         "@types/react-dom": "^16.9.9",
         "contentful-import": "^7.8.7",
         "css-loader": "^5.0.1",
+        "file-loader": "^6.2.0",
         "sass": "^1.32.0",
-        "typescript": "^4.0.5",
         "sass-loader": "^10.1.0",
         "showdown": "^1.9.1",
-        "style-loader": "^2.0.0"
+        "style-loader": "^2.0.0",
+        "typescript": "^4.0.5"
     },
     "license": "MIT"
 }
