--- a/.env.local.example
+++ b/.env.local.example
@@ -2,3 +2,5 @@ CONTENTFUL_SPACE_ID=
 CONTENTFUL_ACCESS_TOKEN=
 CONTENTFUL_PREVIEW_ACCESS_TOKEN=
 CONTENTFUL_PREVIEW_SECRET=
+CONTENTFUL_TEST_URL=
+CURRENT_SERVER_URL=http://localhost:3000
